[add] Button 모바일에서는 active, focus 스타일 제거

--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -239,9 +239,9 @@
   user-select: $select;
 }
 
-@mixin remove-active-and-focus() {
+@mixin remove-active-and-focus($background: transparent) {
   &:active, &:focus {
-    background: transparent;
+    background: $background;
   }
 }
 
