Feature/change quill style (#552)
* [change] ql editor 기본 스타일 변경

* [change] on-air일때 ql-syntax 스타일 변경

https://comento.agit.io/g/300250715/wall/324477846?ir=false&l=agit_io_user_mentioned_v3&sid=324492691&tid=300166075&ts=1628732898#comment_panel_324492691

--- a/assets/style/quill/quill.snow.css
+++ b/assets/style/quill/quill.snow.css
@@ -34,7 +34,7 @@
   line-height: 1.42;
   height: 100%;
   outline: none;
-  overflow-y: auto;
+  overflow-y: visible;
   padding: 12px 15px;
   tab-size: 4;
   -moz-tab-size: 4;
@@ -637,6 +637,14 @@
   background-color: #23241f;
   color: #f8f8f2;
   overflow: visible;
+}
+.on-air .ql-snow .ql-editor pre.ql-syntax {
+  background-color: #23241f;
+  color: #f8f8f2;
+  overflow: visible;
+  /* h3 */
+  font-size: 1.17em;
+  font-weight: bold;
 }
 .ql-snow .ql-editor img {
   max-width: 100%;
