--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -90,7 +90,10 @@
 
 // 툴팁 등에 사용
 @mixin shadow1 {
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  @include ie10plus {
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+  filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.1));
 }
 // 모바일 카드를 감싼 box 등에 사용
 @mixin shadow2 {
@@ -98,11 +101,17 @@
 }
 // topbar, header 등에 사용
 @mixin shadow3 {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  @include ie10plus {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  }
+  filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.05));
 }
 // xlarge 버튼 등에 사용
 @mixin shadow4 {
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.06);
+  @include ie10plus {
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+  filter: drop-shadow(0 3px 7px rgba(0, 0, 0, 0.06));
 }
 
 @mixin transition($transition) {
@@ -300,5 +309,12 @@
         }
       }
     }
+  }
+}
+
+@mixin ie10plus() {
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    /* IE10+ CSS styles go here */
+    @content
   }
 }
