[change] tooltip 내부 wrapper border-radius 추가

--- a/src/assets/style/tooltip/tooltip.scss
+++ b/src/assets/style/tooltip/tooltip.scss
@@ -1,12 +1,13 @@
-@import "common";
+@import 'common';
 .c-tooltip {
-  .c-tooltip--inner {
-    padding: 0 !important;
-    .c-tooltip--content-wrapper {
-      padding: 8px 12px;
-      a {
-        display: inline-block;
-      }
-    }
-  }
+	.c-tooltip--inner {
+		padding: 0 !important;
+		.c-tooltip--content-wrapper {
+			padding: 8px 12px;
+			border-radius: 4px;
+			a {
+				display: inline-block;
+			}
+		}
+	}
 }
