feat: c-not-allowed 추가

--- a/src/assets/style/base/utils.scss
+++ b/src/assets/style/base/utils.scss
@@ -89,6 +89,9 @@
 .c-default {
   cursor: default !important;
 }
+.c-not-allowed {
+  cursor: not-allowed !important;
+}
 
 .h-screen {
   min-height: 100vh;
