feat: link-color 추가

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -57,6 +57,7 @@ $primary: $blue600;
 $success: $green600;
 $error: $red600;
 $secondary: $orange600;
+$link: $blue600;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
