--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -54,9 +54,12 @@ $yellow100: #FFF7CC;
 $yellow000: #FFFDF5;
 
 $primary: $blue600;
+$light-primary: $blue100;
 $success: $green600;
 $error: $red600;
+$info: $gray600;
 $secondary: $orange600;
+$yellow: $yellow600;
 $link: $blue600;
 
 $border-color: $gray200;
