Feature/add colors (우선순위 상) (#698)
* feat: link-color 추가

* feat: 색상 추가

lightPrimary, info, yellow, link

* feat: 기존 secondary -> info

기존 gray 색상은 그대로 유지해야 될 거 같아서 일괄 수정합니다.

* chore: 필요없는 주석 제거

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -54,9 +54,13 @@ $yellow100: #FFF7CC;
 $yellow000: #FFFDF5;
 
 $primary: $blue600;
+$light-primary: $blue100;
 $success: $green600;
 $error: $red600;
+$info: $gray600;
 $secondary: $orange600;
+$yellow: $yellow600;
+$link: $blue600;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
