refactor: base color에서 가져오도록 변경

--- a/src/assets/style/base/color.scss
+++ b/src/assets/style/base/color.scss
@@ -64,4 +64,5 @@ $link: $blue600;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
-$input-hover-border-color: $gray400 // Input, Select, Textarea, TextField
+$input-hover-border-color: $gray400; // Input, Select, Textarea, TextField
+$button-transparent-hover-background-color: rgba(0, 0, 0, 0.2);
