feat: hover-style mixin 추가 및 적용
mobile에서 hover style을 제거하기 위함.

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -252,6 +252,15 @@
   }
 }
 
+@mixin hover-style() {
+  &:focus,&:active,&.hover-test {
+    @content
+  }
+  @include pc {
+    @content
+  }
+}
+
 @mixin spacing {
   // 간격 조절
   $sides: ("b": "bottom", "t": "top", "l": "left", "r": "right", "": "all",  "x": "x", "y": "y");
