IconButton에 transparent 옵션 추가 (#707)
* feat: IconButton에 transparent 추가

* fix: 스토리 제목 오류 수정

* refactor: base color에서 가져오도록 변경

* feat: hover-style mixin 추가 및 적용

mobile에서 hover style을 제거하기 위함.

* fix: pc에만 hover 적용

* rafactor: 이름 변경

hover, focus, active를 다루기 때문에 state로 변경

Co-authored-by: Donghoon <thdehdgns@gmail.com>

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -252,6 +252,17 @@
   }
 }
 
+@mixin state-style() {
+  &:focus,&:active,&.hover-test {
+    @content
+  }
+  @include pc {
+    &:hover {
+      @content
+    }
+  }
+}
+
 @mixin spacing {
   // 간격 조절
   $sides: ("b": "bottom", "t": "top", "l": "left", "r": "right", "": "all",  "x": "x", "y": "y");
