feat: font 기본 적용을 Pretendard로 변경

--- a/src/assets/style/base/fonts.scss
+++ b/src/assets/style/base/fonts.scss
@@ -1,5 +1,5 @@
 $web-font-family:
-  'Pretendard-Regular',
+  'Pretendard',
     //'Noto Sans Kr',
   'Apple SD Gothic Neo',
   'Helvetica Neue', Helvetica, Arial,
