--- a/src/assets/style/base/variables.scss
+++ b/src/assets/style/base/variables.scss
@@ -26,7 +26,7 @@ $container-sm:            (1140px + $grid-gutter-width-pc);
 $html-overflow-y:        scroll;
 
 $light:                  300;
-$normal:                 500;
+$regular:                400;
 $medi:                   700;//h7이고 medi면 500
 $bold:                   700;
 
