feat: font-weight 변경

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -13,31 +13,31 @@
 
 @mixin display1 {
   @include trans-font-size(42px, 1.22);
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin headline1 {
   @include trans-font-size(32px, 1.26);
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin headline2 {
   @include trans-font-size(28px, 1.28);
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin headline3 {
   @include trans-font-size(26px, 1.28);
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin headline4 {
   @include trans-font-size(24px, 1.28);
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin headline5 {
   @include trans-font-size(22px, 1.26);
-  font-weight: $regular;
+  font-weight: $semi-bold;
 }
 @mixin headline6 {
   @include trans-font-size(18px, 1.38);
-  font-weight: $bold;
+  font-weight: $regular;
 }
 @mixin body1 {
   @include trans-font-size(16px, 1.54);
@@ -60,16 +60,16 @@
   font-weight: $light;
 }
 
-@mixin f-normal {
+@mixin f-regular {
   font-weight: $regular !important;
 }
 
-@mixin f-medi {
-  font-weight: $medi;
+@mixin f-medium {
+  font-weight: $medium;
 }
 
 @mixin f-bold {
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 @mixin clearfix {
   *zoom: 1;
