--- a/src/assets/style/base/utils.scss
+++ b/src/assets/style/base/utils.scss
@@ -101,16 +101,16 @@
   font-weight: $light;
 }
 
-.f-normal {
+.f-regular {
   font-weight: $regular;
 }
 
-.f-medi {
-  font-weight: $medi;
+.f-medium {
+  font-weight: $medium;
 }
 
 .f-bold {
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 
 .not-scroll {
