--- a/src/assets/style/base/variables.scss
+++ b/src/assets/style/base/variables.scss
@@ -27,8 +27,8 @@ $html-overflow-y:        scroll;
 
 $light:                  300;
 $regular:                400;
-$medi:                   700;//h7이고 medi면 500
-$bold:                   700;
+$medium:                 500;
+$semi-bold:              600;
 
 
 //
