feat: font-weight 변경 (#759)
* feat: noto sans kr 주석 제거

* feat: font-weight thin 제거

* feat: font-weight 변경(normal -> regular)

* feat: typography weight 제한 변경

* feat: font-weight 변경

* feat: font-weight 변경

--- a/src/assets/style/base/utils.scss
+++ b/src/assets/style/base/utils.scss
@@ -97,24 +97,20 @@
   min-height: 100vh;
 }
 
-.f-thin {
-  font-weight: $thin;
-}
-
 .f-light {
   font-weight: $light;
 }
 
-.f-normal {
-  font-weight: $normal;
+.f-regular {
+  font-weight: $regular;
 }
 
-.f-medi {
-  font-weight: $medi;
+.f-medium {
+  font-weight: $medium;
 }
 
 .f-bold {
-  font-weight: $bold;
+  font-weight: $semi-bold;
 }
 
 .not-scroll {
