--- a/src/assets/style/base/variables.scss
+++ b/src/assets/style/base/variables.scss
@@ -25,11 +25,10 @@ $container-sm:            (1140px + $grid-gutter-width-pc);
 //
 $html-overflow-y:        scroll;
 
-$thin:                   100;
 $light:                  300;
-$normal:                 500;
-$medi:                   700;//h7이고 medi면 500
-$bold:                   700;
+$regular:                400;
+$medium:                 500;
+$semi-bold:              600;
 
 
 //
