feat: nuxt에 있던 mixin 가져오기

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -319,3 +319,24 @@
     }
   }
 }
+
+@mixin margin-x($value) {
+  margin-left: $value;
+  margin-right: $value;
+}
+
+@mixin padding-y($value) {
+  padding-top: $value;
+  padding-bottom: $value;
+}
+
+@mixin flex-v-middle() {
+  @include flexbox();
+  @include align-items(center);
+}
+
+@mixin flex-column-v-middle() {
+  @include flexbox();
+  @include flex-direction(column);
+  @include align-items(center);
+}
