feat: datePicker today font color 변경 (#772)
* feat: datePicker today font color 변경

* feat: today 날짜 hover 상태일때 font color 그대로 유지

--- a/src/assets/style/datePicker/datePicker.init.scss
+++ b/src/assets/style/datePicker/datePicker.init.scss
@@ -24,5 +24,11 @@
 
   &-datepicker-main {
     border-radius: 2px;
+    .today {
+      color: $primary;
+      &:hover {
+        color: $primary;
+      }
+    }
   }
 }
