fix: state-style 로직 수정

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -252,11 +252,12 @@
 }
 
 @mixin state-style() {
-  &:focus,&:active,&.hover-test {
+  &:hover, &.hover-test {
     @content
   }
-  @include pc {
-    &:hover {
+
+  @include mobile {
+    &:focus,&:active {
       @content
     }
   }
