feat: body1 letter-spacing 변경

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -44,6 +44,7 @@
 @mixin body1 {
   @include trans-font-size(16px, 1.54);
   font-weight: $regular;
+  letter-spacing: 0.02em;
 }
 @mixin body2 {
   @include trans-font-size(14px, 1.4);
