fix: state-style 모바일, PC 모두 변경

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -252,12 +252,14 @@
 }
 
 @mixin state-style() {
-  &:hover, &.hover-test {
-    @content
+  @include mobile {
+    &:active,&.hover-test {
+      @content
+    }  
   }
 
-  @include mobile {
-    &:focus,&:active {
+  @include pc {
+    &:hover,&:active,&.hover-test {
       @content
     }
   }
