refactor: 공통 부분 분리

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -252,14 +252,12 @@
 }
 
 @mixin state-style() {
-  @include mobile {
-    &:active,&.hover-test {
-      @content
-    }  
+  &.hover-test,&:active {
+    @content
   }
 
   @include pc {
-    &:hover,&:active,&.hover-test {
+    &:hover {
       @content
     }
   }
