fix: state-style 모바일, PC 모두 변경 (#856)
* fix: state-style 모바일, PC 모두 변경

* refactor: 공통 부분 분리

--- a/src/assets/style/base/mixins.scss
+++ b/src/assets/style/base/mixins.scss
@@ -253,12 +253,12 @@
 }
 
 @mixin state-style() {
-  &:hover, &.hover-test {
+  &.hover-test,&:active {
     @content
   }
 
-  @include mobile {
-    &:focus,&:active {
+  @include pc {
+    &:hover {
       @content
     }
   }
