--- a/src/assets/style/quill/quill.init.scss
+++ b/src/assets/style/quill/quill.init.scss
@@ -115,7 +115,7 @@
  */
 .ql-snow {
   a {
-    color: $success;
+    color: $primary;
     text-decoration: underline;
   }
 
@@ -126,7 +126,6 @@
     .ql-picker-label:before {
       content: '본문1';
       position: relative;
-      top: -2px;
     }
     .ql-picker-item[data-value='1']:before,
     .ql-picker-label[data-value='1']:before {
